# operators

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: ToolchainOptions.cmake
include/: adouble.h
include/cpp03/: adouble.h  adouble_base.inc  adouble_fr.h
include/cpp11/: adouble.h  adouble_et.h  adouble_tao.h  binary_op.hpp  unary_op.hpp
include/util/: macro_oo.h  macro_oo_friend.h  macro_oo_template.h
scripts/: format_all.sh  unit_tests.sh
test/: CMakeLists.txt
test/include/: TestUtil.h
test/src/: main.cpp  operator_test.hpp  test_adouble.cpp  test_adouble_et.cpp  test_adouble_h.cpp  test_adouble_tao.cpp
